[gd_scene load_steps=18 format=3 uid="uid://dwemeqesk48kw"]

[ext_resource type="Script" path="res://Scenes/UI_Elements/settings_menu.gd" id="1_qs4ru"]
[ext_resource type="Shader" path="res://Core/Game/wavy_sidebar.gdshader" id="2_tn6mq"]
[ext_resource type="Shader" path="res://Scenes/UI_Elements/topDownWobble.gdshader" id="3_ia2ge"]
[ext_resource type="Script" path="res://Scenes/UI_Elements/pause_buttons.gd" id="6_5eyux"]
[ext_resource type="AudioStream" uid="uid://c5fw4tvlujmfy" path="res://Assets/SFX/UI/zapsplat_multimedia_game_sound_glass_clink_003_72372.mp3" id="7_8ntyr"]
[ext_resource type="Script" path="res://Scenes/UI_Elements/CategoryContainer.gd" id="8_rxy5f"]
[ext_resource type="Script" path="res://Scenes/UI_Elements/settings_comp/settings_list.gd" id="9_07xrw"]
[ext_resource type="PackedScene" uid="uid://b4emyp3fdhl7t" path="res://Scenes/UI_Elements/settings_comp/bool_setting.tscn" id="10_fcuvx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_18l0x"]
shader = ExtResource("2_tn6mq")
shader_parameter/progress = 0.1
shader_parameter/waveFrequency1 = 3.5
shader_parameter/waveFrequency2 = 5.5
shader_parameter/waveAmplitude1 = 0.021
shader_parameter/waveAmplitude2 = 0.009
shader_parameter/waveSpeed1 = 0.06
shader_parameter/waveSpeed2 = 0.07
shader_parameter/waveLength1 = 1.0
shader_parameter/waveLength2 = 1.0
shader_parameter/noiseScale = 3.96
shader_parameter/noiseSpeed = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5r1ne"]
shader = ExtResource("3_ia2ge")
shader_parameter/progress = 1.0
shader_parameter/waveFrequency1 = 3.5
shader_parameter/waveFrequency2 = 5.5
shader_parameter/waveAmplitude1 = 0.007
shader_parameter/waveAmplitude2 = 0.004
shader_parameter/waveSpeed1 = 1.0
shader_parameter/waveSpeed2 = 0.07
shader_parameter/waveLength1 = 0.1
shader_parameter/waveLength2 = 0.1
shader_parameter/noiseScale = 3.479
shader_parameter/noiseSpeed = 1.82

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dtfaq"]
shader = ExtResource("3_ia2ge")
shader_parameter/progress = 0.87
shader_parameter/waveFrequency1 = 3.5
shader_parameter/waveFrequency2 = 5.5
shader_parameter/waveAmplitude1 = 0.001
shader_parameter/waveAmplitude2 = 0.001
shader_parameter/waveSpeed1 = 0.06
shader_parameter/waveSpeed2 = 0.07
shader_parameter/waveLength1 = 1.5
shader_parameter/waveLength2 = 1.2
shader_parameter/noiseScale = 3.0
shader_parameter/noiseSpeed = 0.55

[sub_resource type="Animation" id="Animation_msaqv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingsWobble:material:shader_parameter/progress")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_oad6j"]
resource_name = "setting_hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SectionSettings:anchor_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [0.4, 1.1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SectionSettings:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [0.95, 1.1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SettingsWobble2:material:shader_parameter/progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [2.08165e-12, 0.65]
}

[sub_resource type="Animation" id="Animation_e5p7n"]
resource_name = "setting_reveal"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("SectionSettings:anchor_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [1.1, 0.4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("SectionSettings:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [1.1, 0.95]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("SettingsWobble2:material:shader_parameter/progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [0.65, 2.08165e-12]
}

[sub_resource type="Animation" id="Animation_khyu4"]
resource_name = "settings_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingsWobble:material:shader_parameter/progress")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [1.0, 0.2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Header:anchor_top")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [-0.9, 0.1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Header:anchor_bottom")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [-0.9, 0.1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TopBar:anchor_top")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [-0.75, 0.25]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TopBar:anchor_bottom")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [-0.6, 0.3]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SectionSettings:anchor_top")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [-0.6, 0.4]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SectionSettings:anchor_bottom")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [-0.13, 0.87]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SettingsWobble2:anchor_bottom")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_0tham"]
resource_name = "settings_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingsWobble:material:shader_parameter/progress")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [0.1, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Header:anchor_top")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [0.1, 0.9]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Header:anchor_bottom")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [0.1, -0.9]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TopBar:anchor_top")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [0.25, -0.75]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TopBar:anchor_bottom")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [0.3, -0.6]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SectionSettings:anchor_top")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [0.4, -0.6]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SectionSettings:anchor_bottom")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [0.87, -0.13]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SettingsWobble2:anchor_bottom")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 5),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t4yat"]
_data = {
"RESET": SubResource("Animation_msaqv"),
"setting_hide": SubResource("Animation_oad6j"),
"setting_reveal": SubResource("Animation_e5p7n"),
"settings_in": SubResource("Animation_khyu4"),
"settings_out": SubResource("Animation_0tham")
}

[node name="SettingsSubMenu" type="Control"]
z_index = -1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_qs4ru")

[node name="PauseLinger" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_18l0x")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.235294, 0.2, 0.501961, 1)

[node name="SettingsWobble" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5r1ne")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.235294, 0.2, 0.501961, 1)

[node name="SettingsWobble2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_dtfaq")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.490196, 0.439216, 0.741176, 1)

[node name="Header" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.05
anchor_bottom = 0.1
offset_top = -4.0
offset_right = 480.0
offset_bottom = 116.0
theme_type_variation = &"SettingHeader"
text = "Settings"

[node name="TopBar" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 120)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.25
anchor_right = 0.95
anchor_bottom = 0.3
theme_override_constants/separation = 0

[node name="BackButton" type="Button" parent="TopBar" node_paths=PackedStringArray("focus")]
layout_mode = 2
size_flags_vertical = 0
focus_neighbor_left = NodePath(".")
focus_neighbor_bottom = NodePath("\"\"")
text = "< | "
script = ExtResource("6_5eyux")
disable_press_sfx = true
focus = NodePath("Focus")

[node name="Focus" type="AudioStreamPlayer" parent="TopBar/BackButton"]
stream = ExtResource("7_8ntyr")
volume_db = -10.0
bus = &"SFX"

[node name="SettingCategories" type="ScrollContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
follow_focus = true
vertical_scroll_mode = 0

[node name="CategoryContainer" type="HBoxContainer" parent="TopBar/SettingCategories" node_paths=PackedStringArray("setting_list")]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("8_rxy5f")
setting_list = NodePath("../../../SectionSettings/Items")

[node name="SectionSettings" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.14
anchor_top = 0.4
anchor_right = 0.95
anchor_bottom = 0.87
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="Items" type="VBoxContainer" parent="SectionSettings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 30
script = ExtResource("9_07xrw")

[node name="Bool" parent="SectionSettings/Items" instance=ExtResource("10_fcuvx")]
layout_mode = 2

[node name="Bool2" parent="SectionSettings/Items" instance=ExtResource("10_fcuvx")]
layout_mode = 2

[node name="Bool3" parent="SectionSettings/Items" instance=ExtResource("10_fcuvx")]
layout_mode = 2

[node name="Bool4" parent="SectionSettings/Items" instance=ExtResource("10_fcuvx")]
layout_mode = 2

[node name="Bool5" parent="SectionSettings/Items" instance=ExtResource("10_fcuvx")]
layout_mode = 2

[node name="Bool6" parent="SectionSettings/Items" instance=ExtResource("10_fcuvx")]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t4yat")
}
speed_scale = 2.0

[connection signal="focus_entered" from="TopBar/BackButton" to="TopBar/BackButton" method="_on_focus_entered"]
[connection signal="pressed" from="TopBar/BackButton" to="." method="_on_button_pressed"]
